Add enum assembly